# maya-cmake

./: README.md
MayaPlugins/: CMakeLists.txt
MayaPlugins/SDK/: Readme.md  readme.txt
MayaPlugins/cmake/: FindMaya.cmake
MayaPlugins/plug-ins/: Readme.md
MayaPlugins/projects/: Readme.md
MayaPlugins/projects/testCommand/: CMakeLists.txt  pluginMain.cpp  testCommand.cpp  testCommand.h
MayaPlugins/projects/testDeformer/: CMakeLists.txt  pluginMain.cpp  testDeformer.cpp  testDeformer.h
